# llm-deploy

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/llm_deploy/: __init__.py  config.py  database.py  main.py
backend/llm_deploy/adapters/: __init__.py  huggingface.py  modelscope_adapter.py  ssh_executor.py
backend/llm_deploy/api/: __init__.py  deployments.py  deps.py  downloads.py  environments.py  hardware.py  images.py  models.py  params.py  tasks.py
backend/llm_deploy/bg_tasks/: __init__.py  tasks.py  worker.py
backend/llm_deploy/knowledge/: __init__.py  loader.py
backend/llm_deploy/models/: __init__.py  deployment.py  download.py  environment.py  image_build.py  model_metadata.py  task.py
backend/llm_deploy/schemas/: deployment.py  download.py  environment.py  hardware.py  image.py  model.py  params.py  task.py
backend/llm_deploy/services/: api_wrapper.py  command_builder.py  deployer.py  dockerfile_generator.py  download_manager.py  env_prechecker.py  image_builder.py  (+5 more)
backend/tests/: test_api_tasks.py  test_command_builder.py  test_dockerfile_generator.py  test_download_api.py  test_environments_api.py  test_hardware_matcher.py  test_knowledge_loader.py  test_model_parser.py  test_models.py  test_param_calculator.py
docs/: PRD_LLM_Deploy_v1.0.md  SDD_LLM_Deploy_v1.0.md  交互原型_LLM_Deploy_v1.0.md  开发计划_LLM_Deploy_v1.0.md  用户需求提示词.md  系统需求提示词.md  设计目标.md
frontend/: index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
(+30 files in other folders)
